; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rts5208/extr_ms.c_ms_set_rw_reg_addr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rts5208/extr_ms.c_ms_set_rw_reg_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtsx_chip = type { i32 }

@MS_MAX_RETRY_COUNT = common dso_local global i32 0, align 4
@SET_RW_REG_ADRS = common dso_local global i32 0, align 4
@NO_WAIT_INT = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4
@STATUS_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rtsx_chip*, i32, i32, i32, i32)* @ms_set_rw_reg_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ms_set_rw_reg_addr(%struct.rtsx_chip* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.rtsx_chip*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca [4 x i32], align 16
  store %struct.rtsx_chip* %0, %struct.rtsx_chip** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %15 = load i32, i32* %8, align 4
  %16 = getelementptr inbounds [4 x i32], [4 x i32]* %14, i64 0, i64 0
  store i32 %15, i32* %16, align 16
  %17 = load i32, i32* %9, align 4
  %18 = getelementptr inbounds [4 x i32], [4 x i32]* %14, i64 0, i64 1
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* %10, align 4
  %20 = getelementptr inbounds [4 x i32], [4 x i32]* %14, i64 0, i64 2
  store i32 %19, i32* %20, align 8
  %21 = load i32, i32* %11, align 4
  %22 = getelementptr inbounds [4 x i32], [4 x i32]* %14, i64 0, i64 3
  store i32 %21, i32* %22, align 4
  store i32 0, i32* %13, align 4
  br label %23

23:                                               ; preds = %41, %5
  %24 = load i32, i32* %13, align 4
  %25 = load i32, i32* @MS_MAX_RETRY_COUNT, align 4
  %26 = icmp slt i32 %24, %25
  br i1 %26, label %27, label %44

27:                                               ; preds = %23
  %28 = load %struct.rtsx_chip*, %struct.rtsx_chip** %7, align 8
  %29 = load i32, i32* @SET_RW_REG_ADRS, align 4
  %30 = load i32, i32* @NO_WAIT_INT, align 4
  %31 = getelementptr inbounds [4 x i32], [4 x i32]* %14, i64 0, i64 0
  %32 = call i32 @ms_write_bytes(%struct.rtsx_chip* %28, i32 %29, i32 4, i32 %30, i32* %31, i32 4)
  store i32 %32, i32* %12, align 4
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* @STATUS_SUCCESS, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %27
  %37 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %37, i32* %6, align 4
  br label %46

38:                                               ; preds = %27
  %39 = load %struct.rtsx_chip*, %struct.rtsx_chip** %7, align 8
  %40 = call i32 @rtsx_clear_ms_error(%struct.rtsx_chip* %39)
  br label %41

41:                                               ; preds = %38
  %42 = load i32, i32* %13, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %13, align 4
  br label %23

44:                                               ; preds = %23
  %45 = load i32, i32* @STATUS_FAIL, align 4
  store i32 %45, i32* %6, align 4
  br label %46

46:                                               ; preds = %44, %36
  %47 = load i32, i32* %6, align 4
  ret i32 %47
}

declare dso_local i32 @ms_write_bytes(%struct.rtsx_chip*, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @rtsx_clear_ms_error(%struct.rtsx_chip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
